# mini_flight

./: README.md  pyproject.toml
common/: interface.py  realtime.py  serve.py  types.py
config/: index.html  serve.py
config/js/: app.js
examples/: orient_filter.py  quad_hover_env.py  sensor_fusion.py  sf2.py
examples/STM32/: imu_stream.py
miniflight/: board.py  control.py  estimate.py  filters.py  hal.py  hil.py  input.py  main.py
sim/: __init__.py  engine.py  index.html  serve.py
sim/js/: app.js
test/: test_math.py  test_mixer.py  test_physics.py  test_rk4.py
